k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ics-timezone-fixer
  name: ics-timezone-fixer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ics-timezone-fixer
      component: ingress-controller
      type: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ics-timezone-fixer
        component: ingress-controller
        type: nginx
    spec:
      containers:
        - image: johrad/ics-timezone-fixer
          imagePullPolicy: Always
          name: ics-timezone-fixer
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
